# schema_learning

./: README.md
schema_learning/: Cargo.toml
schema_learning/src/: entropy.rs  main.rs  optimizer.rs  schema.rs  table.rs  utils.rs
schemas/: FNHK.txt  PKDD_financial.txt  StackOverflow_posts.txt  StackOverflow_votes.txt  ccs.txt  movielens_actors.txt  movielens_users.txt  musicbrainz_results.txt  ncvoter_results.txt  tpch_noisy_results.txt  tpch_results.txt
scripts/: README.md  build_metanome_results_graph.py  gen_create_table.py  gen_dataset.py  inject_noise.py  name_metanome_cols.pl  name_tpch_columns.pl  parse_metanome_results.py  reconstruct_all_results.sh  reconstruct_metanome_results.py  run_on_data_file.py  sample_cols.py
