[package]
name = "schema_learning"
version = "0.1.0"
authors = ["anonymous"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
itertools = "0.9.0"
bitintr = "0.3.0"
structopt = "0.3.17"
hashable_rc = "0.2.1"
ansi_term = "0.12.1"
hashbrown = "0.9.1"